[gd_scene load_steps=10 format=3 uid="uid://brayaanbjj2q1"]

[ext_resource type="Script" path="res://script/element_screen.gd" id="1_bawap"]
[ext_resource type="StyleBox" uid="uid://dx8pdckt4l1rb" path="res://resource/buttonstyle.tres" id="2_slbkg"]
[ext_resource type="FontFile" uid="uid://csv62pf5suogx" path="res://font/xolonium/Xolonium-Bold.ttf" id="2_syvfx"]
[ext_resource type="PackedScene" uid="uid://b64xklwdq3pxa" path="res://scene/specialist_menu.tscn" id="2_vlx38"]
[ext_resource type="Texture2D" uid="uid://b1hken8ex51bd" path="res://asset/splash_backgrounds/main_menu_background.png" id="3_xoe3c"]
[ext_resource type="Texture2D" uid="uid://o8jxufx0n72p" path="res://asset/panels/minimal_wide_panel.png" id="4_m8xd7"]
[ext_resource type="Texture2D" uid="uid://bylylf6hfuovj" path="res://asset/button_icons/standard_menu_button.png" id="7_1k3x2"]
[ext_resource type="Texture2D" uid="uid://bs13p45bohhnw" path="res://asset/button_icons/add_button.png" id="8_d7si3"]
[ext_resource type="Texture2D" uid="uid://biy5ncrywh8m1" path="res://asset/button_icons/sub_button.png" id="9_4whwl"]

[node name="ElementMenu" type="CanvasLayer"]

[node name="ElementScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bawap")
continue_screen = ExtResource("2_vlx38")

[node name="MainMenuBackground" type="Sprite2D" parent="ElementScreen"]
position = Vector2(960, 540)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_xoe3c")

[node name="MinimalWidePanel" type="Sprite2D" parent="ElementScreen"]
position = Vector2(928, 544)
scale = Vector2(2.17531, 2.24299)
texture = ExtResource("4_m8xd7")

[node name="Title" type="Label" parent="ElementScreen"]
layout_mode = 0
offset_left = 320.0
offset_top = 64.0
offset_right = 1536.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 60
text = "CHARACTER CREATION : ELEMENT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ElementImage" type="TextureRect" parent="ElementScreen"]
layout_mode = 0
offset_left = 1632.0
offset_top = 832.0
offset_right = 1824.0
offset_bottom = 1024.0
expand_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ElementScreen"]
layout_mode = 0
offset_left = 328.0
offset_top = 248.0
offset_right = 1528.0
offset_bottom = 936.0
horizontal_scroll_mode = 0

[node name="InfoBox" type="VBoxContainer" parent="ElementScreen/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="ElementDescription" type="RichTextLabel" parent="ElementScreen/ScrollContainer/InfoBox"]
clip_contents = false
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/bold_font = ExtResource("2_syvfx")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
bbcode_enabled = true
text = "On this page you can distribute your available [b]Elemental Affinity[/b] points into any of the Elements listed on the left. These points will strengthen your ability while using the same Element. They will also strengthen your resistance against attacks made by the same element. Click on any of the Elements in the list to learn more about them. "
fit_content = true

[node name="Strength" type="RichTextLabel" parent="ElementScreen/ScrollContainer/InfoBox"]
layout_mode = 2
bbcode_enabled = true
text = "Strength : "
fit_content = true

[node name="Weakness" type="RichTextLabel" parent="ElementScreen/ScrollContainer/InfoBox"]
layout_mode = 2
bbcode_enabled = true
text = "Weakness : "
fit_content = true

[node name="Reactions" type="Label" parent="ElementScreen/ScrollContainer/InfoBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Reactions"
horizontal_alignment = 1

[node name="ReactionGrid" type="GridContainer" parent="ElementScreen/ScrollContainer/InfoBox"]
layout_mode = 2

[node name="ElementGrid" type="GridContainer" parent="ElementScreen"]
layout_mode = 0
offset_left = 1600.0
offset_top = 256.0
offset_right = 1856.0
offset_bottom = 768.0
theme_override_constants/v_separation = 20

[node name="SolarButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 246.0
offset_right = 304.0
offset_bottom = 314.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
toggle_mode = true
text = "SOLAR"
icon = ExtResource("7_1k3x2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="NatureButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 310.0
offset_right = 304.0
offset_bottom = 378.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
toggle_mode = true
text = "NATURE"
icon = ExtResource("7_1k3x2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="SpiritButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 374.0
offset_right = 304.0
offset_bottom = 442.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
toggle_mode = true
text = "SPIRIT"
icon = ExtResource("7_1k3x2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="VoidButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 438.0
offset_right = 304.0
offset_bottom = 506.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
toggle_mode = true
text = "VOID"
icon = ExtResource("7_1k3x2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ArcButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 502.0
offset_right = 304.0
offset_bottom = 570.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
toggle_mode = true
text = "ARC"
icon = ExtResource("7_1k3x2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="FrostButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 566.0
offset_right = 304.0
offset_bottom = 634.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
toggle_mode = true
text = "FROST"
icon = ExtResource("7_1k3x2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="MetalButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 630.0
offset_right = 304.0
offset_bottom = 698.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
toggle_mode = true
text = "METAL"
icon = ExtResource("7_1k3x2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="DivineButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 694.0
offset_right = 304.0
offset_bottom = 762.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
toggle_mode = true
text = "DIVINE"
icon = ExtResource("7_1k3x2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ContinueButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 24.0
offset_top = 960.0
offset_right = 304.0
offset_bottom = 1028.0
theme_override_colors/font_pressed_color = Color(0, 0.588235, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
text = "CONTINUE"
icon = ExtResource("7_1k3x2")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AddButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 800.0
offset_top = 960.0
offset_right = 862.0
offset_bottom = 1024.0
theme_override_colors/font_pressed_color = Color(0, 0, 0.784314, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
icon = ExtResource("8_d7si3")
flat = true
icon_alignment = 1
expand_icon = true

[node name="MinusButton" type="Button" parent="ElementScreen"]
layout_mode = 0
offset_left = 994.0
offset_top = 960.0
offset_right = 1056.0
offset_bottom = 1024.0
theme_override_colors/font_pressed_color = Color(0, 0, 0.784314, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
icon = ExtResource("9_4whwl")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PointLabel" type="Label" parent="ElementScreen"]
layout_mode = 0
offset_left = 864.0
offset_top = 970.0
offset_right = 992.0
offset_bottom = 1014.0
theme_override_font_sizes/font_size = 36
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Warning" type="ColorRect" parent="ElementScreen"]
visible = false
custom_minimum_size = Vector2(550, 550)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.784314)

[node name="WarningOutline" type="ColorRect" parent="ElementScreen/Warning"]
layout_mode = 0
offset_left = 256.0
offset_top = 384.0
offset_right = 1600.0
offset_bottom = 648.0
color = Color(1, 0, 0, 1)

[node name="WarningBox" type="ColorRect" parent="ElementScreen/Warning"]
layout_mode = 0
offset_left = 264.0
offset_top = 392.0
offset_right = 1592.0
offset_bottom = 640.0

[node name="Label" type="Label" parent="ElementScreen/Warning"]
layout_mode = 0
offset_left = 272.0
offset_top = 400.0
offset_right = 1584.0
offset_bottom = 576.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "YOU STILL HAVE ELEMENTAL AFFINITY POINTS AVAILABLE! CHOOSING CONTINUE WILL FORFEIT THE REMAINING POINTS AND BEGIN THE GAME WITHOUT THEM. ARE YOU SURE YOU WISH TO PROCEED?"
autowrap_mode = 3

[node name="ForfeitContinueButton" type="Button" parent="ElementScreen/Warning"]
layout_mode = 0
offset_left = 1264.0
offset_top = 576.0
offset_right = 1473.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.784314, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
text = "CONTINUE"
flat = true
alignment = 0

[node name="CancelButton" type="Button" parent="ElementScreen/Warning"]
layout_mode = 0
offset_left = 384.0
offset_top = 576.0
offset_right = 548.0
offset_bottom = 640.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.784314, 1)
theme_override_colors/font_hover_color = Color(0, 0.588235, 0, 1)
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("2_slbkg")
theme_override_styles/hover = ExtResource("2_slbkg")
theme_override_styles/pressed = ExtResource("2_slbkg")
theme_override_styles/focus = ExtResource("2_slbkg")
text = "CANCEL
"
flat = true
alignment = 0

[connection signal="pressed" from="ElementScreen/SolarButton" to="ElementScreen" method="_on_solar_button_pressed"]
[connection signal="pressed" from="ElementScreen/NatureButton" to="ElementScreen" method="_on_nature_button_pressed"]
[connection signal="pressed" from="ElementScreen/SpiritButton" to="ElementScreen" method="_on_spirit_button_pressed"]
[connection signal="pressed" from="ElementScreen/VoidButton" to="ElementScreen" method="_on_void_button_pressed"]
[connection signal="pressed" from="ElementScreen/ArcButton" to="ElementScreen" method="_on_arc_button_pressed"]
[connection signal="pressed" from="ElementScreen/FrostButton" to="ElementScreen" method="_on_frost_button_pressed"]
[connection signal="pressed" from="ElementScreen/MetalButton" to="ElementScreen" method="_on_metal_button_pressed"]
[connection signal="pressed" from="ElementScreen/DivineButton" to="ElementScreen" method="_on_divine_button_pressed"]
[connection signal="pressed" from="ElementScreen/ContinueButton" to="ElementScreen" method="_on_continue_button_pressed"]
[connection signal="pressed" from="ElementScreen/AddButton" to="ElementScreen" method="_on_add_button_pressed"]
[connection signal="pressed" from="ElementScreen/MinusButton" to="ElementScreen" method="_on_minus_button_pressed"]
[connection signal="pressed" from="ElementScreen/Warning/ForfeitContinueButton" to="ElementScreen" method="_on_forfeit_continue_button_pressed"]
[connection signal="pressed" from="ElementScreen/Warning/CancelButton" to="ElementScreen" method="_on_cancel_button_pressed"]
